--- a/full_react_app/package.json
+++ b/full_react_app/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "file:bootstrap",
+    "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
     "firebase": "^7.14.3",
     "firebase-admin": "^8.12.1",
     "font-awesome": "^4.7.0",
@@ -39,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
